--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
 		<link rel="shrotcut icon" type="image/png" href="<%= BASE_URL %>footer.png" />
 		<title>Cyber Sky</title>
 		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"> -->
+		<!-- Global site tag (gtag.js) - Google Analytics-->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-DVVS9H8DV6"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+			gtag("config", "G-DVVS9H8DV6");
+		</script>
 		<link href="https://cdn.jsdelivr.net/npm/font-awesome@4.x/css/font-awesome.min.css" rel="stylesheet" />
 	</head>
 	<body>
