--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
 		<title>Cyber Sky</title>
 		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"> -->
 		<!-- Global site tag (gtag.js) - Google Analytics-->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-DVVS9H8DV6"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMR55Z3B4S"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
 				dataLayer.push(arguments);
 			}
 			gtag("js", new Date());
-			gtag("config", "G-DVVS9H8DV6");
+			gtag("config", "G-MMR55Z3B4S");
 		</script>
 		<link href="https://cdn.jsdelivr.net/npm/font-awesome@4.x/css/font-awesome.min.css" rel="stylesheet" />
 	</head>
